[gd_scene load_steps=6 format=3 uid="uid://cuwv1tdatxvq1"]

[ext_resource type="Script" uid="uid://bqnv8n675ynno" path="res://scripts/menus_scripts/victory_menu.gd" id="1_qtocq"]
[ext_resource type="Texture2D" uid="uid://bydwb5cgv4gvc" path="res://assets/images/for_menus/happy_ending.png" id="2_ucpym"]
[ext_resource type="FontFile" uid="uid://dritpapbkxc" path="res://assets/fonts/Chewy/Chewy-Regular.ttf" id="3_51nac"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ntwv"]
texture = ExtResource("2_ucpym")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y38n5"]
bg_color = Color(0.641934, 0.641934, 0.641934, 1)
corner_radius_top_left = 17
corner_radius_top_right = 17
corner_radius_bottom_right = 17
corner_radius_bottom_left = 17
shadow_size = 5
shadow_offset = Vector2(0, 3)

[node name="Victory_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qtocq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4ntwv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = 45.0
offset_right = -59.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_51nac")
theme_override_font_sizes/normal_font_size = 48
text = "YOU WON!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -100.0
offset_right = 76.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14
alignment = 1

[node name="Main Menu" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_51nac")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_y38n5")
text = "Main Menu"

[node name="Credits" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_51nac")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_y38n5")
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_51nac")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_y38n5")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
